# geospatial-data-collection-processing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
airflow/dags/: dag.py
airflow/dags/fetch_products/: .env  DockerFile  fetch_products.py
terraform/: gke.tf  provider.tf  storage.tf  terraform.tfvars  values.yaml
