[tool.poetry]
name = "geospatial-data-collection-processing"
version = "0.1.0"
description = ""
authors = ["hamzaraouzi <hamza.raouzi2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
airflow = "^0.6"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
